DE8106 Fix left alignment of MPU

--- a/main/css/ft/advertising.css
+++ b/main/css/ft/advertising.css
@@ -18,8 +18,8 @@
 #mpu, #mpu2, #mpu3,
 #hlfmpu, #hlfmpu2, #hlfmpu3   { margin:0 0 32px 0 ; width:352px ; min-height:250px ; text-align:center ; }
 
-#mpu > *, #mpu2 > *, #mpu3 > *,
-#hlfmpu > *, #hlfmpu2 > *, #hlfmpu3  > * {
+#mpu *, #mpu2 *, #mpu3 *,
+#hlfmpu *, #hlfmpu2 *, #hlfmpu3 * {
     margin: 0 auto;
 }
 
